[gd_scene load_steps=24 format=3 uid="uid://dhm6fgrtpr053"]

[ext_resource type="Script" uid="uid://dbsuicokbdrd3" path="res://merchant/merchant.gd" id="1_1sb1b"]
[ext_resource type="PackedScene" uid="uid://dao4cui0qcwt8" path="res://common/ui/bg.tscn" id="1_oqpag"]
[ext_resource type="Texture2D" uid="uid://y5iobs0gcgd3" path="res://merchant/stall.png" id="2_w4elb"]
[ext_resource type="Shader" uid="uid://bqb75j0d5opfs" path="res://common/shaders/white_outline.gdshader" id="4_7m5xb"]
[ext_resource type="Texture2D" uid="uid://c8kmoqgdryjcn" path="res://merchant/items/boxing_gloves.png" id="4_jlacv"]
[ext_resource type="Texture2D" uid="uid://bubl2y7mgfehn" path="res://merchant/upgrade_item.png" id="5_7m5xb"]
[ext_resource type="Texture2D" uid="uid://cfc5hw42vjrvi" path="res://merchant/description_panel.png" id="6_p4o88"]
[ext_resource type="FontFile" uid="uid://csdy5bm6finb1" path="res://common/fonts/BitPap.ttf" id="8_p4o88"]
[ext_resource type="Texture2D" uid="uid://c6qosmgk1j0d5" path="res://merchant/price_panel.png" id="9_j3gy0"]
[ext_resource type="Texture2D" uid="uid://corcudqibaj57" path="res://merchant/gold.png" id="10_m7s0i"]
[ext_resource type="PackedScene" uid="uid://cl5ov5nvhs82d" path="res://common/ui/close_tab/close_tab.tscn" id="11_m7s0i"]
[ext_resource type="Texture2D" uid="uid://tf0iieolnv6r" path="res://merchant/dice.png" id="12_gjn1l"]
[ext_resource type="Shader" uid="uid://7k8808qqc0nc" path="res://common/shaders/remove_antialising.gdshader" id="13_lpoj3"]
[ext_resource type="FontFile" uid="uid://5jasf4bxnkqr" path="res://common/fonts/two pixels wide.ttf" id="14_kxva3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j3gy0"]
shader = ExtResource("4_7m5xb")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 0.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="Animation" id="Animation_p4o88"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(28, 7)]
}

[sub_resource type="Animation" id="Animation_7m5xb"]
resource_name = "move"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(28, 7), Vector2(28, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j3gy0"]
_data = {
&"RESET": SubResource("Animation_p4o88"),
&"move": SubResource("Animation_7m5xb")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m7s0i"]
shader = ExtResource("4_7m5xb")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 0.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ajbkr"]
shader = ExtResource("4_7m5xb")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 0.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7775r"]
shader = ExtResource("4_7m5xb")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 1.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3dypq"]
shader = ExtResource("13_lpoj3")
shader_parameter/colour = Color(0.180392, 0.133333, 0.184314, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gjn1l"]
shader = ExtResource("4_7m5xb")
shader_parameter/color = Color(0.180392, 0.133333, 0.184314, 1)
shader_parameter/width = 1.0
shader_parameter/pattern = 1
shader_parameter/inside = false
shader_parameter/add_margins = true

[node name="Merchant" type="Node2D"]
script = ExtResource("1_1sb1b")

[node name="BG" parent="." instance=ExtResource("1_oqpag")]
metadata/_edit_lock_ = true

[node name="Price" type="NinePatchRect" parent="."]
offset_left = 121.0
offset_top = 121.0
offset_right = 182.0
offset_bottom = 140.0
texture = ExtResource("9_j3gy0")
patch_margin_left = 2
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 2

[node name="Price" type="Label" parent="Price"]
layout_mode = 0
offset_left = 2.0
offset_top = 3.0
offset_right = 47.0
offset_bottom = 19.0
theme_override_colors/font_color = Color(0.431373, 0.152941, 0.152941, 1)
theme_override_fonts/font = ExtResource("8_p4o88")
text = "2.22m"
horizontal_alignment = 1

[node name="Gold" type="Sprite2D" parent="Price"]
position = Vector2(51, 10)
texture = ExtResource("10_m7s0i")

[node name="Stall" type="Sprite2D" parent="."]
position = Vector2(160, 90)
texture = ExtResource("2_w4elb")

[node name="Items" type="Node2D" parent="."]

[node name="Item1" type="TextureButton" parent="Items"]
material = SubResource("ShaderMaterial_j3gy0")
offset_left = 75.0
offset_top = 98.0
offset_right = 107.0
offset_bottom = 130.0
texture_normal = ExtResource("4_jlacv")

[node name="UpgradeItem" type="Sprite2D" parent="Items/Item1"]
position = Vector2(28, 7)
texture = ExtResource("5_7m5xb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Items/Item1/UpgradeItem"]
libraries = {
&"": SubResource("AnimationLibrary_j3gy0")
}
autoplay = "move"

[node name="Item2" type="TextureButton" parent="Items"]
material = SubResource("ShaderMaterial_m7s0i")
offset_left = 124.0
offset_top = 99.0
offset_right = 156.0
offset_bottom = 131.0
texture_normal = ExtResource("4_jlacv")

[node name="UpgradeItem" type="Sprite2D" parent="Items/Item2"]
position = Vector2(28, 7)
texture = ExtResource("5_7m5xb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Items/Item2/UpgradeItem"]
libraries = {
&"": SubResource("AnimationLibrary_j3gy0")
}
autoplay = "move"

[node name="Item3" type="TextureButton" parent="Items"]
material = SubResource("ShaderMaterial_ajbkr")
offset_left = 173.0
offset_top = 97.0
offset_right = 205.0
offset_bottom = 129.0
texture_normal = ExtResource("4_jlacv")

[node name="UpgradeItem" type="Sprite2D" parent="Items/Item3"]
position = Vector2(28, 7)
texture = ExtResource("5_7m5xb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Items/Item3/UpgradeItem"]
libraries = {
&"": SubResource("AnimationLibrary_j3gy0")
}
autoplay = "move"

[node name="DescriptionPanel" type="NinePatchRect" parent="."]
offset_top = 144.0
offset_right = 320.0
offset_bottom = 180.0
texture = ExtResource("6_p4o88")
patch_margin_left = 2
patch_margin_top = 4
patch_margin_right = 4

[node name="DescriptionText" type="RichTextLabel" parent="."]
clip_contents = false
offset_left = 2.0
offset_top = 148.0
offset_right = 316.0
offset_bottom = 180.0
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0.431373, 0.152941, 0.152941, 1)
theme_override_fonts/normal_font = ExtResource("8_p4o88")
bbcode_enabled = true
text = "[color=#2e222f]boxing glove: [/color]first [color=#91db69]5[/color] clicks do 22.2x damage
test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseGarage" parent="." instance=ExtResource("11_m7s0i")]
offset_left = 287.0
offset_top = 1.0
offset_right = 319.0
offset_bottom = 33.0

[node name="RollButton" type="TextureButton" parent="."]
material = SubResource("ShaderMaterial_7775r")
offset_left = 17.0
offset_top = 72.0
offset_right = 33.0
offset_bottom = 88.0
texture_normal = ExtResource("12_gjn1l")

[node name="Align" type="HBoxContainer" parent="RollButton"]
layout_mode = 0
offset_left = -2.0
offset_top = 19.0
offset_right = 19.0
offset_bottom = 27.0
theme_override_constants/separation = 0
alignment = 1

[node name="Price" type="Label" parent="RollButton/Align"]
material = SubResource("ShaderMaterial_3dypq")
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("14_kxva3")
theme_override_font_sizes/font_size = 6
text = "222"
horizontal_alignment = 2

[node name="TextureRect" type="TextureRect" parent="RollButton/Align"]
material = SubResource("ShaderMaterial_gjn1l")
layout_mode = 2
texture = ExtResource("10_m7s0i")
stretch_mode = 3

[connection signal="pressed" from="Items/Item1" to="." method="buy" binds= [1]]
[connection signal="pressed" from="Items/Item2" to="." method="buy" binds= [2]]
[connection signal="pressed" from="Items/Item3" to="." method="buy" binds= [3]]
